# connect-python-openapi-client

./: .gitignore  .travis.yml  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/workflows/: build.yml  deploy.yml  docs.yml  publish.yml
cnct/: __init__.py  client.py  openapi.py  rql.py  utils.py
cnct/client/: exceptions.py  fluent.py  help.py  help_formatter.py  models.py  openapi.py  utils.py  version.py
cnct/client/models/: __init__.py  base.py  resourceset.py
cnct/help/: __init__.py  formatter.py  generator.py
cnct/rql/: __init__.py  base.py  utils.py
cnct/specs/: models.py  parser.py
connect/: __init__.py
connect/client/: __init__.py  constants.py  exceptions.py  fluent.py  help_formatter.py  logger.py  mixins.py  openapi.py  utils.py  version.py
connect/client/contrib/locust/: __init__.py  user.py
connect/client/models/: __init__.py  base.py  exceptions.py  iterators.py  mixins.py  resourceset.py
connect/client/rql/: __init__.py  base.py  utils.py
connect/client/testing/: __init__.py  fixtures.py  fluent.py
connect/client/testing/models/: __init__.py  base.py  mixins.py  resourceset.py
docs/: async_client.md  conf.py  genindex.py  getting_started.md  getting_started.rst  guide.md  guide.rst  index.md  index.rst  namespaces_and_collections.md  querying_collections.md  r_object.md  reference.rst  sync_client.md  testing.md  tutorial.rst  working_with_resources.md
docs/_build/markdown/: 001_guide.md  002_reference.md  index.md  report.json
docs/css/: custom.css
requirements/: dev.txt  docs.txt  prod.txt  test.txt
tests/: conftest.py
tests/async_client/: test_fixtures.py  test_fluent.py  test_models.py  test_testing.py
tests/client/: test_exceptions.py  test_fixtures.py  test_fluent.py  test_help_formatter.py  test_logger.py  test_models.py  test_moves.py  test_openapi.py  test_testing.py  test_utils.py  test_version.py
tests/data/: specs.yml
tests/fixtures/: client_models.py  specs_models.py
tests/help/: test_formatter.py
tests/rql/: test_base.py  test_utils.py
tests/specs/: test_parser.py
